a couple .ipynb changes with teddy

--- a/evosim.ipynb
+++ b/evosim.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "# Setup\n",
     "\n",
-    "### Population Genetice\n",
+    "### Population Genetics\n",
     "\n",
     "TBD\n",
     "\n",
@@ -366,7 +366,7 @@
     "args.minMu = 2 # 2 - try 3 4 5\n",
     "args.numClades = 1\n",
     "\n",
-    "args.N = 1e5 # 1e3\n",
+    "args.N = 1e5\n",
     "args.T = 1e4\n",
     "#args.plotLog = True\n",
     "args.plotAB = True\n",
@@ -529,6 +529,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a35257fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52aac3e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc876d46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "685a231f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c66228f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "05c27646-ed47-494c-afbf-318a258fa8e8",
    "metadata": {},
    "outputs": [],
@@ -540,7 +584,51 @@
    "id": "5093a2c7-284b-43ff-b856-447bced95af3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "args = evosim.default_args.copy()\n",
+    "\n",
+    "args.minMu = 2\n",
+    "args.numClades = 7\n",
+    "\n",
+    "args.s = 0.1 # change this to see effect of selection strength\n",
+    "args.includeMutation = True\n",
+    "args.T = 1e6\n",
+    "args.numEpochs = 1\n",
+    "args.stochasticEnv = False\n",
+    "args.aToB = 0.0\n",
+    "\n",
+    "args.N = -1 # change this and re-run to see differential effect of selection vs drift\n",
+    "args.plotAB = False\n",
+    "args.plotLog = True\n",
+    "\n",
+    "evosim.evosim(args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "150adaa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "args = evosim.default_args.copy()\n",
+    "\n",
+    "args.minMu = 2\n",
+    "args.numClades = 7\n",
+    "\n",
+    "args.s = 0.1 # change this to see effect of selection strength\n",
+    "args.includeMutation = True\n",
+    "args.T = 1e6\n",
+    "args.numEpochs = 1\n",
+    "args.stochasticEnv = False\n",
+    "args.aToB = 0.0\n",
+    "\n",
+    "args.N = 1e5 # change this and re-run to see differential effect of selection vs drift\n",
+    "args.plotAB = False\n",
+    "args.plotLog = True\n",
+    "\n",
+    "evosim.evosim(args)"
+   ]
   },
   {
    "cell_type": "code",
@@ -687,7 +775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
